--- a/bleed bot websit.html
+++ b/bleed bot websit.html
@@ -2,39 +2,35 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
-      <title>bleed - the only premium bot you need</title>
+      <title>CosmosDHC - Cheap, Fast, Easy</title>
       <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sarala&amp;display=swap">
       <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <meta name="viewport" content="initial-scale=0.7, minimal-ui, viewport-fit=cover, width=device-width">
       <meta name="theme-color" content="#69919D">
       <meta property="og:type" content="website">
-      <meta property="og:site_name" content="bleed.bot">
-      <meta property="og:title" content="bleed - the only premium bot you need">
-      <meta property="og:image" content="https://bleed.bot/img/logo_transparent.png">
-      <meta property="og:url" content="https://bleed.bot/">
+      <meta property="og:site_name" content="Cosmos">
+      <meta property="og:title" content="CosmosDHC - Cheap, Fast, Easy">
+      <meta property="og:image" content="assets/logo_transparent.png">
+      <meta property="og:url" content="https://dhcosmos.com>
       <meta property="og:description" content="boss discord bot">
       <meta property="description" content="boss discord bot">
-      <meta property="keywords" content="bleed, bleed bot, discord, discord bleed bot, bleed discord bot, bot, discord bot, lastfm, last.fm, the best bot, literally, it, really, is, premium bot, premium discord bot, premium bleed, slatty">
+      <meta property="keywords" content="dahood, dahoodcash, dhc, cheap dahood cash, cheap dhc, roblox dahood cash, free robux, roblox, free dhc, free dahood cash, how to get free dahood money, how to get free dhc, dahood money glitch, dahood money dupe method">
       <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/fomantic-ui@nightly/dist/semantic.min.css">
       <link rel="stylesheet" type="text/css" href="css/css.css">
-      <link rel="shortcut icon" href="https://bleed.bot/img/logo_transparent.png">
+      <link rel="shortcut icon" href="assets/logo_transparent.png">
    </head>
    <body>
       <div class="main desktop">
          <div id="stars"></div>
          <div class="home">
-            <!--<div class="item">
-               <a class="button" href="https://dashboard.bleed.bot/oauth/login">
-               <i class="discord icon"></i> Login</a>
-            </div> dont bother going there, the subdomain is not up :) -->
             <div class="model">
                <div class="header">
                   <span class="logo"></span> 
                   <h2 class="title">bleed bot</h2>
                </div>
-               <div class="links"> <a href="https://docs.bleed.bot/" target="_blank">docs</a> <a href="https://bleed.bot/discord" target="_blank">discord</a> <a href="https://bleed.bot/help" target="_blank">cmds</a></div>
-               <div class="disclaimer"> Bleed is paid and not free. You can invite the bot by clicking <a href="https://bleed.bot/invite" target="_blank">here</a> if your server is whitelisted. If you<br> need assistance or are interested in obtaining bleed in your server then proceed to join our <a href="https://bleed.bot/discord" target="_blank">Discord</a> <br>from the link above. If you don't like this nor want to pay then please exit this website and don't return.</div>
+               <div class="links"> <a href="" target="_blank">docs</a> <a href="https://bleed.bot/discord" target="_blank">discord</a> <a href="" target="_blank">cmds</a></div>
+               <div class="disclaimer"> Cosmos DHC (Cosmos DaHood Cash) sells drastically cheap in-game money for DaHood in prices that would usually cost you over $100 to $1000. <br> Our prices start at $0.50 USD per 1 Million Cash up to 25 dollars for 100 Million Cash. Any purchases above can be discussed.  <br>Currently we are doing our first 50 orders of 15 million cash for free. To purchase now, join our discord above.</div>
             </div>
          </div>
       </div>
