--- a/bleed bot websit.html
+++ b/bleed bot websit.html
@@ -11,14 +11,14 @@
       <meta property="og:type" content="website">
       <meta property="og:site_name" content="Cosmos">
       <meta property="og:title" content="CosmosDHC - Cheap, Fast, Easy">
-      <meta property="og:image" content="assets/logo_transparent.png">
+      <meta property="og:image" content="https://raw.githubusercontent.com/Vetrivex/cosmos-dhc-website/a6325538ac4aa7397421295139cf76b1dced6273/assets/logo_transparent.png">
       <meta property="og:url" content="https://dhcosmos.com>
-      <meta property="og:description" content="boss discord bot">
-      <meta property="description" content="boss discord bot">
+      <meta property="og:description" content="cosmos dhc">
+      <meta property="description" content="cosmos dhc">
       <meta property="keywords" content="dahood, dahoodcash, dhc, cheap dahood cash, cheap dhc, roblox dahood cash, free robux, roblox, free dhc, free dahood cash, how to get free dahood money, how to get free dhc, dahood money glitch, dahood money dupe method">
       <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/fomantic-ui@nightly/dist/semantic.min.css">
       <link rel="stylesheet" type="text/css" href="css/css.css">
-      <link rel="shortcut icon" href="assets/logo_transparent.png">
+      <link rel="shortcut icon" href="https://github.com/Vetrivex/cosmos-dhc-website/blob/main/assets/logo_transparent.png">
    </head>
    <body>
       <div class="main desktop">
@@ -27,9 +27,9 @@
             <div class="model">
                <div class="header">
                   <span class="logo"></span> 
-                  <h2 class="title">bleed bot</h2>
+                  <h2 class="title">Cosmos DHC</h2>
                </div>
-               <div class="links"> <a href="" target="_blank">docs</a> <a href="https://bleed.bot/discord" target="_blank">discord</a> <a href="" target="_blank">cmds</a></div>
+               <div class="links"> <a href="" target="_blank"></a> <a href="https://discord.gg/6heN7PKUE5" target="_blank">discord</a> <a href="" target="_blank"></a></div>
                <div class="disclaimer"> Cosmos DHC (Cosmos DaHood Cash) sells drastically cheap in-game money for DaHood in prices that would usually cost you over $100 to $1000. <br> Our prices start at $0.50 USD per 1 Million Cash up to 25 dollars for 100 Million Cash. Any purchases above can be discussed.  <br>Currently we are doing our first 50 orders of 15 million cash for free. To purchase now, join our discord above.</div>
             </div>
          </div>
