--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <meta property="keywords" content="dahood, dahoodcash, dhc, cheap dahood cash, cheap dhc, roblox dahood cash, free robux, roblox, free dhc, free dahood cash, how to get free dahood money, how to get free dhc, dahood money glitch, dahood money dupe method">
       <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/fomantic-ui@nightly/dist/semantic.min.css">
       <link rel="stylesheet" type="text/css" href="css/css.css">
-      <link rel="shortcut icon" href="https://github.com/Vetrivex/cosmos-dhc-website/blob/main/assets/logo_transparent.png">
+      <link rel="shortcut icon" href="https://raw.githubusercontent.com/Vetrivex/cosmos-dhc-website/main/assets/logo_transparent.png">
    </head>
    <body>
       <div class="main desktop">
