--- a/discord.html
+++ b/discord.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>CosmosDHC - Cheap, Fast, Easy</title>
+    <title>Cosmos DHC Discord</title>
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Sarala&amp;display=swap"
@@ -12,13 +12,11 @@
       name="viewport"
       content="initial-scale=0.7, minimal-ui, viewport-fit=cover, width=device-width"
     />
-    <meta name="theme-color" content="#69919D" />
-    <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Cosmos" />
-    <meta property="og:title" content="CosmosDHC - Cheap, Fast, Easy" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
-      property="og:image"
-      content="https://raw.githubusercontent.com/Vetrivex/cosmos-dhc-website/a6325538ac4aa7397421295139cf76b1dced6273/assets/logo_transparent.png"
+      http-equiv="refresh"
+      content="7; url='https://discord.com/invite/6heN7PKUE5'"
     />
     <meta property="og:url" content="https://dhcosmos.com>
     <meta property="og:description" content="cosmos dhc" />
@@ -32,7 +30,7 @@
       type="text/css"
       href="https://cdn.jsdelivr.net/npm/fomantic-ui@nightly/dist/semantic.min.css"
     />
-    <link rel="stylesheet" type="text/css" href="css/cosmos_style.css" />
+    <link rel="stylesheet" type="text/css" href="css/dspage.css" />
     <link
       rel="shortcut icon"
       href="https://raw.githubusercontent.com/Vetrivex/cosmos-dhc-website/main/assets/logo_transparent.png"
@@ -45,21 +43,7 @@
         <div class="model">
           <div class="header">
             <span class="logo"></span>
-            <h2 class="title">Cosmos DHC</h2>
-          </div>
-          <div class="links">
-            <a href="discord.html" target="_blank"></a>
-            <a href="discord.html" target="_blank">Discord Server</a>
-            <a href="" target="_blank"></a>
-          </div>
-          <div class="disclaimer">
-            Cosmos DHC (Cosmos DaHood Cash) sells drastically cheap in-game
-            money for DaHood in prices that would usually cost you over $100 to
-            $1000. <br />
-            Our prices start at $0.50 USD per 1 Million Cash up to 25 dollars
-            for 100 Million Cash. Any purchases above can be discussed.
-            <br />Currently we are doing our first 50 orders of 15 million cash
-            for free. To purchase now, join our discord above.
+            <h2 class="title">Redirecting to Cosmos DHC Discord</h2>
           </div>
         </div>
       </div>
